tests/fixtures/invalid/array_length_star_typedef.c
typedef int Scores[*];
int main(void) {
    return 0;
}
